--- a/css/mtequal.css
+++ b/css/mtequal.css
@@ -296,7 +296,9 @@ div.index {
 
 div.error {background: #fff; z-index:3; position:fixed; top:45px; left:100px; border-left: solid 1px #000; border-bottom: solid 1px #666; padding: 3px; font-size: 16px; margin-bottom: 0px; border-radius: 0px 0px 0px 15px;}
 div.sentindex {display: cell; margin-left: 36px; width: 60px; font-size: 13px; padding-top: 5px; text-align: right; vertical-align: top; padding-right: 4px; top: 10px}
-div.source {border: solid #bbb 1px; font-weight: bold; display: inline-block; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; padding: 4px; padding-bottom: 8px; width: 575px; border-radius: 4px 4px 4px 4px;}
+/*div.source {border: solid #bbb 1px; font-weight: bold; display: inline-block; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; padding: 4px; padding-bottom: 8px; width: 575px; border-radius: 4px 4px 4px 4px;}*/
+div.source {font-weight: bold; display: inline-block; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; padding: 4px; padding-bottom: 8px; width: 575px; border-radius: 4px 4px 4px;}
+div.context {font-style: italic; display: inline-block; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; padding: 4px; padding-bottom: 8px; width: 575px; border-radius: 4px 4px 4px 4px;}
 div.reference {margin-left: 2px; display: inline-block; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; color: #888; padding: 4px; margin-top: 8px; padding-bottom: 10px;  width: 575px;}
 div.output {margin-left: 2px; display: inline-block; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; padding: 3px; margin-top: 8px; margin-right: 8px; width: 800px; border: solid #aaa 1px; padding: 4px; top: -10px}
 div.none {margin-left: 2px; display: inline; font-family:Arial, Helvetica, Sans-Serif; font-size:15px; margin-top: 8px; margin-right: 8px; width: 590px; border: solid #aaa 1px; padding: 4px; top: -10px}
@@ -316,7 +318,7 @@ div.orangebg {display: inline-block; cursor: pointer; cursor: hand; background: 
 div.whitebg {display: inline-block; cursor:default; background: white;}
 
 div.token {display: inline-block; margin-bottom: 0px; border-top: solid white 2px;}
-div.donebottom {background: #cde;  bottom: -3px; display: inline-block; position: fixed; text-align: left; font-size: 14px; padding: 5px; right: 40px; border: solid #999 1px; border-radius: 15px 15px 0px 0px; z-index: 1000}
+div.donebottom {background: #cde; bottom: -3px; display: inline-block; position: fixed; text-align: left; font-size: 14px; padding: 5px; left: 40px; border: solid #999 1px; border-radius: 15px 15px 0px 0px; z-index: 1000}
 
 td.black { background-color: black; }
 td.white { background-color: #ccc; }
